--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,10 @@ branding:
   icon: check
 description: "Analyze compliance with fair-software.eu recommendations"
 name: fair-software
+inputs:
+  SWITCH:
+    description: "One of 'repository', 'license', 'registry', 'citation', 'checklist'."
+    required: true
 runs:
   image: Dockerfile
   using: docker
