--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,9 @@ inputs:
   SWITCH:
     description: "One of 'repository', 'license', 'registry', 'citation', 'checklist'."
     required: true
+  repository:
+    description: URL of the repository being inspected
+    required: true
 runs:
   image: Dockerfile
   using: docker
