--- a/.dockerignore
+++ b/.dockerignore
@@ -2,10 +2,7 @@
 *
 
 # ... except these
-!1-repository
-!2-license
-!3-registry
-!4-citation
-!5-checklist
-!check.sh
+!bin
+!howfairis
 !registries.yaml
+!setup.py
