--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,9 @@ branding:
   icon: check
 description: "Analyze compliance with fair-software.eu recommendations"
 name: fair-software
+  REPO_URL:
+    description: 'URL of the GitHub repository for which to run the analysis'
+    required: false
 runs:
   image: Dockerfile
   using: docker
-  entrypoint: '/bin/sh env'
