--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ description: "Analyze compliance with fair-software.eu recommendations"
 name: fair-software
   REPO_URL:
     description: 'URL of the GitHub repository for which to run the analysis'
-    required: false
+    required: true
 runs:
   image: Dockerfile
   using: docker
