--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ branding:
 description: "Analyze compliance with fair-software.eu recommendations"
 name: fair-software
 inputs:
-  REPO_URL:
+  MY_REPO_URL:
     description: 'URL of the GitHub repository for which to run the analysis'
     required: true
 runs:
