--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,11 @@
+[bumpversion]
+current_version = 0.1.0
+
 [metadata]
 description-file = README.md
 
 [aliases]
-# Define `python setup.py test`
-test=pytest
+test = pytest
 
 [coverage:run]
 branch = True
@@ -19,14 +21,10 @@ force_single_line = 1
 no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = howfairis
 
-
-[bumpversion]
-current_version = 0.1.0
-
 [bumpversion:file:setup.py]
-search = set version="{current_version}"
-replace = set version="{new_version}"
+search = version="{current_version}"
+replace = version="{new_version}"
 
 [bumpversion:file:howfairis/__version__.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
