--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,3 @@
-[bumpversion]
-current_version = 0.1.0
-
 [metadata]
 description-file = README.md
 
@@ -21,9 +18,12 @@ force_single_line = 1
 no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = howfairis
 
-[bumpversion:file:setup.py]
-search = version="{current_version}"
-replace = version="{new_version}"
+[bumpversion]
+current_version = 0.1.0
+
+; [bumpversion:file:setup.py]
+; search = version="{current_version}"
+; replace = version="{new_version}"
 
 [bumpversion:file:howfairis/__version__.py]
 search = __version__ = "{current_version}"
