--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
+[bumpversion]
+current_version = 0.1.0
+
+[bumpversion:file:howfairis/__version__.py]
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
+
+[bumpversion:file:setup.py]
+search = version="{current_version}",
+replace = version="{new_version}"
+
 [metadata]
 description-file = README.md
 
@@ -18,13 +29,3 @@ force_single_line = 1
 no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = howfairis
 
-[bumpversion]
-current_version = 0.1.0
-
-; [bumpversion:file:setup.py]
-; search = version="{current_version}"
-; replace = version="{new_version}"
-
-[bumpversion:file:howfairis/__version__.py]
-search = __version__ = "{current_version}"
-replace = __version__ = "{new_version}"
