fixed version bumping with bump2version; updated cli location for howfairis

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,17 @@
 [bumpversion]
-current_version = 0.1.0
+current_version = 0.1.1
 
 [bumpversion:file:howfairis/__version__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
 
 [bumpversion:file:setup.py]
-search = version="{current_version}",
+search = version="{current_version}"
 replace = version="{new_version}"
+
+[bumpversion:file:CITATION.cff]
+search = version: "{current_version}"
+replace = version: "{new_version}"
 
 [metadata]
 description-file = README.md
@@ -28,4 +32,3 @@ lines_after_imports = 2
 force_single_line = 1
 no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = howfairis
-
