--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
           pip install --editable .[dev]
       - name: Check style against standards using prospector
         shell: bash -l {0}
-        run: cd howfairis && prospector -o grouped -o pylint:pylint-report.txt
+        run: cd howfairis && prospector
       - name: Build
         shell: bash -l {0}
         run: |
@@ -38,5 +38,4 @@ jobs:
       - name: Test
         shell: bash -l {0}
         run: |
-          python setup.py test
-          pytest --cov --cov-report term --cov-report xml --junitxml=xunit-result.xml
+          cd howfairis && pytest
