--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 /.idea/
 /howfairis.egg-info/
-/howfairis/__pycache__/
+/**/__pycache__/
 /venv3
 /.eggs
 /.coverage
 /coverage.xml
 /htmlcov/
-/tests/__pycache__/
 
 
