--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Python info
         shell: bash -l {0}
         run: |
-          which python
+          which python${{ matrix.python-version }}
           python --version
       - name: Install dependencies
         run: |
