--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,23 +19,23 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Python info
-        shell: bash -l {0}
+        shell: bash
         run: |
-          which python3
+          which python
           python --version
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install --editable .
-          python -m pip install --editable .[dev]
-      - name: Check style against standards using prospector
-        shell: bash -l {0}
-        run: prospector
-      - name: Build
-        shell: bash -l {0}
-        run: |
-          python setup.py build
-      - name: Test
-        shell: bash -l {0}
-        run: |
-          pytest
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          python -m pip install --editable .
+#          python -m pip install --editable .[dev]
+#      - name: Check style against standards using prospector
+#        shell: bash -l {0}
+#        run: prospector
+#      - name: Build
+#        shell: bash -l {0}
+#        run: |
+#          python setup.py build
+#      - name: Test
+#        shell: bash -l {0}
+#        run: |
+#          pytest
