--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,12 @@ jobs:
         run: |
           which python
           python --version
-#      - name: Install dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          python -m pip install --editable .
-#          python -m pip install --editable .[dev]
+      - name: Install dependencies
+        shell: bash
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --editable .
+          python -m pip install --editable .[dev]
 #      - name: Check style against standards using prospector
 #        shell: bash -l {0}
 #        run: prospector
