--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         shell: bash
         run: |
           python setup.py build
-#      - name: Test
-#        shell: bash -l {0}
-#        run: |
-#          pytest
+      - name: Test
+        shell: bash -l {0}
+        run: |
+          pytest
