--- a/.github/workflows/livetest.yml
+++ b/.github/workflows/livetest.yml
@@ -1,6 +1,7 @@
 name: Build
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
 
 jobs:
 
@@ -27,8 +28,8 @@ jobs:
         shell: bash
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --editable .
-          python -m pip install --editable .[dev]
+          python -m pip install .
+          python -m pip install .[dev]
       - name: Check style against standards using prospector
         shell: bash
         run: prospector
@@ -37,9 +38,7 @@ jobs:
         run: isort --check-only --recursive --diff howfairis
       - name: Build
         shell: bash
-        run: |
-          python setup.py build
+        run: python setup.py build
       - name: Test
-        shell: bash -l {0}
-        run: |
-          pytest
+        shell: bash
+        run: pytest livetests/
