--- a/.github/workflows/livetests.yml
+++ b/.github/workflows/livetests.yml
@@ -1,6 +1,14 @@
 name: livetests
 
-on: [push, pull_request]
+on:
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
 
 jobs:
 
