--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,8 +27,8 @@ jobs:
         shell: bash
         run: |
           python -m pip install --upgrade pip
-          python -m pip install --editable .
-          python -m pip install --editable .[dev]
+          python -m pip install .
+          python -m pip install .[dev]
       - name: Check style against standards using prospector
         shell: bash
         run: prospector
