Check docs can be build in a push or pr using CI build workflow

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,3 +41,7 @@ jobs:
       - name: Test
         shell: bash
         run: pytest tests/
+      - name: Build API docs
+        shell: bash
+        working-directory: docs
+        run: make html
