Disable 'unsubscriptable-object' pylint rule
So CI build using Python 3.9 can pass.

--- a/.prospector.yml
+++ b/.prospector.yml
@@ -28,3 +28,7 @@ pep257:
         D213,  # Multi-line docstring summary should start at the second line
         D404,  # First word of the docstring should not be This
     ]
+
+pylint:
+  disable:
+    - unsubscriptable-object # Not supported in Python 3.9
