--- a/.github/workflows/livetests.yml
+++ b/.github/workflows/livetests.yml
@@ -27,8 +27,7 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .
+          python -m pip install --upgrade pip wheel
           python -m pip install .[dev]
       - name: Check style against standards using prospector
         shell: bash
