--- a/setup.cfg
+++ b/setup.cfg
@@ -24,8 +24,8 @@ branch = True
 source = howfairis
 
 [tool:pytest]
-python_files = *Test.py
-python_classes = *Test
+python_files = Test*.py
+python_classes = Test*
 python_functions = test_*
 testpaths = tests
 
