--- a/setup.cfg
+++ b/setup.cfg
@@ -24,7 +24,7 @@ branch = True
 source = howfairis
 
 [tool:pytest]
-python_files = Test*.py
+python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
 testpaths = tests
