--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,10 +2,7 @@
 
 name: Lint Code Base
 
-on:
-  push:
-  pull_request:
-    types: [opened, reopened]
+on: [push, pull_request]
 
 jobs:
   linter:
