--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,3 +17,4 @@ jobs:
         uses: docker://github/super-linter:v3
         env:
           VALIDATE_ALL_CODEBASE: true
+          FILTER_REGEX_EXCLUDE: /github/workspace/docs/.*
