--- a/setup.cfg
+++ b/setup.cfg
@@ -32,4 +32,6 @@ force_single_line = 1
 no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
 known_first_party = howfairis
 src_paths = howfairis,tests,livetests
+line_length = 120
+
 
