--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,13 @@ source = howfairis
 
 [tool:pytest]
 testpaths = tests
+markers =
+  bitbucket: bitbucket tests
+  checker: checker tests
+  compliance: compliance tests
+  github: github tests
+  gitlab: gitlab tests
+  repo: repo tests
 
 [tool:isort]
 lines_after_imports = 2
