added automatic test annotation with pytest.marks

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,12 +26,12 @@ source = howfairis
 [tool:pytest]
 testpaths = tests
 markers =
-  bitbucket: bitbucket tests
-  checker: checker tests
-  compliance: compliance tests
-  github: github tests
-  gitlab: gitlab tests
-  repo: repo tests
+  bitbucket: Bitbucket tests
+  checker: Checker tests
+  compliance: Compliance tests
+  github: GitHub tests
+  gitlab: GitLab tests
+  repo: Repo tests
 
 [tool:isort]
 lines_after_imports = 2
