--- a/howfairis/data/.howfairis.yml
+++ b/howfairis/data/.howfairis.yml
@@ -1,6 +1,9 @@
-skip_repository_checks_reason: ~
-skip_license_checks_reason: ~
-skip_registry_checks_reason: ~
-skip_citation_checks_reason: ~
-skip_checklist_checks_reason: ~
+##   Uncomment a line if you want to skip a given category of checks
+
+# skip_repository_checks_reason: <reason for skipping goes here>
+# skip_license_checks_reason: <reason for skipping goes here>
+# skip_registry_checks_reason: <reason for skipping goes here>
+# skip_citation_checks_reason: <reason for skipping goes here>
+# skip_checklist_checks_reason: <reason for skipping goes here>
+
 include_comments: false
