--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,10 +1,10 @@
 ---
 
-name: Lint Code Base
+name: linter
 
-#on: [push, pull_request]
-on:
-  workflow_dispatch:
+on: [push, pull_request]
+# on:
+#   workflow_dispatch:
 
 jobs:
   linter:
