--- a/.pylintrc
+++ b/.pylintrc
@@ -70,7 +70,7 @@ disable=apply-builtin,
         cmp-method,
         coerce-builtin,
         coerce-method,
-        comprehension-escape
+        comprehension-escape,
         delslice-method,
         deprecated-itertools-function,
         deprecated-operator-function,
@@ -141,7 +141,7 @@ disable=apply-builtin,
         using-cmp-argument,
         xrange-builtin,
         xreadlines-attribute,
-        zip-builtin-not-iterating,
+        zip-builtin-not-iterating
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -249,8 +249,6 @@ function-naming-style=snake_case
 
 # Good variable names which should always be accepted, separated by a comma.
 good-names=i,
-           j,
-           k,
            ex,
            Run,
            _
