disabled the 'optional is unsubscriptable' rule

--- a/.pylintrc
+++ b/.pylintrc
@@ -136,6 +136,7 @@ disable=apply-builtin,
         unichr-builtin,
         unicode-builtin,
         unpacking-in-except,
+        unsubscriptable-object,
         use-symbolic-message-instead,
         useless-suppression,
         using-cmp-argument,
