--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 docs/_build
 docs/apidocs
 
+# ignore the coverage reports generated when running pylint with coverage calculation
+/coverage/.coverage
+/coverage/htmlcov/*
+/coverage/coverage.xml
+
 
 # don't accidentally commit secrets like apikeys
 /**secret**
