--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,6 @@ sonar.links.homepage=https://github.com/fair-software/howfairis
 sonar.links.scm=https://github.com/fair-software/howfairis
 sonar.links.issue=https://github.com/fair-software/howfairis/issues
 sonar.links.ci=https://github.com/fair-software/howfairis/actions
-sonar.python.coverage.reportPaths=coverage.xml
-sonar.python.xunit.reportPath=xunit-result.xml
+sonar.python.coverage.reportPaths=coverage/coverage.xml
+sonar.python.xunit.reportPath=coverage/xunit-result.xml
 sonar.python.pylint.reportPaths=pylint-report.txt
