fixed linter errors

--- a/.prospector.yml
+++ b/.prospector.yml
@@ -14,14 +14,15 @@ ignore-paths:
   - docs\conf.py
   - tests
   - livetests
+  - venv3
 
 pyroma:
     run: true
 
-pep8:
+pycodestyle:
     full: true
 
-pep257:
+pydocstyle:
     disable: [
         # Disable because not part of PEP257 official convention:
         # see http://pep257.readthedocs.io/en/latest/error_codes.html
