--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ search = version: "{current_version}"
 replace = version: "{new_version}"
 
 [metadata]
-description-file = README.md
+description_file = README.md
 
 [aliases]
 test = pytest
