--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -36,7 +36,7 @@ jobs:
         run: prospector
       - name: Check style of imports
         shell: bash
-        run: isort --check-only --recursive --diff howfairis
+        run: isort --check-only --diff howfairis
       - name: Build
         shell: bash
         run: python setup.py build
