updated extension for readme file in package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@ search = version: "{current_version}"
 replace = version: "{new_version}"
 
 [metadata]
-description_file = README.md
+description_file = README.rst
 
 [aliases]
 test = pytest
