--- a/.github/workflows/livetests.yml
+++ b/.github/workflows/livetests.yml
@@ -9,19 +9,13 @@ on:
 jobs:
 
   build:
-    name: Build for (${{ matrix.python-version }}, ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ['ubuntu-latest']
-        python-version: ['3.10']
+    name: livetests
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.10
       - name: Python info
         shell: bash
         run: |
