--- a/.github/workflows/livetests.yml
+++ b/.github/workflows/livetests.yml
@@ -10,6 +10,7 @@ jobs:
 
   build:
     name: livetests
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
