--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - name: Install dependencies
         run: python -m pip install .[dev]
       - name: Check style against standards using prospector
