--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,9 +31,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip wheel
           python -m pip install .[dev]
-      - name: Check style against standards using prospector
-        shell: bash
-        run: prospector
+      # - name: Check style against standards using prospector
+      #   shell: bash
+      #   run: prospector
       - name: Check style of imports
         shell: bash
         run: isort --check-only --diff howfairis
